// Copyright 2022 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message VertexBetaMetadataStore {
  string name = 1;
  string create_time = 2;
  string update_time = 3;
  VertexBetaMetadataStoreEncryptionSpec encryption_spec = 4;
  string description = 5;
  VertexBetaMetadataStoreState state = 6;
  string project = 7;
  string location = 8;
}

message VertexBetaMetadataStoreEncryptionSpec {
  string kms_key_name = 1;
}

message VertexBetaMetadataStoreState {
  int64 disk_utilization_bytes = 1;
}

message ApplyVertexBetaMetadataStoreRequest {
  VertexBetaMetadataStore resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteVertexBetaMetadataStoreRequest {
  string service_account_file = 1;
  VertexBetaMetadataStore resource = 2;
}

message ListVertexBetaMetadataStoreRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListVertexBetaMetadataStoreResponse {
  repeated VertexBetaMetadataStore items = 1;
}

service VertexBetaMetadataStoreService {
  rpc ApplyVertexBetaMetadataStore(ApplyVertexBetaMetadataStoreRequest) returns (VertexBetaMetadataStore);
  rpc DeleteVertexBetaMetadataStore(DeleteVertexBetaMetadataStoreRequest) returns (google.protobuf.Empty);
  rpc ListVertexBetaMetadataStore(ListVertexBetaMetadataStoreRequest) returns (ListVertexBetaMetadataStoreResponse);
}
